# DEF-W9-25_YOLOatr

./: .env.serve  .gitignore  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: debug.toml  nuaa_sirst.toml  nuaa_sirst_train.toml  paper.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-loss-functions.md  PRD-04-training-pipeline.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-07-integration.md
scripts/: evaluate.py  export.py  train.py
src/anima_yoloatr/: __init__.py  dataset.py  evaluate.py  export.py  losses.py  model.py  serve.py  train.py  utils.py
src/anima_yoloatr/backends/: __init__.py
src/anima_yoloatr/backends/cuda/: __init__.py
src/anima_yoloatr/backends/mlx/: __init__.py
tasks/: INDEX.md
tests/: test_dataset.py  test_export.py  test_losses.py  test_model.py
