[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-yoloatr"
version = "0.1.0"
description = "YOLOatr: Automatic Target Detection in Thermal Infrared Imagery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "ANIMA Team", email = "team@robotflowlabs.com"},
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.14.0",
    "safetensors>=0.4.0",
    "onnx>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "matplotlib>=3.7.0",
    "albumentations>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "onnxruntime>=1.16.0",
]
serve = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
yoloatr-train = "anima_yoloatr.train:main"
yoloatr-eval = "anima_yoloatr.evaluate:main"
yoloatr-export = "anima_yoloatr.export:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anima_yoloatr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["anima_yoloatr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
